// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemePasswordInput renders correctly by default 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#fafcff",
          "borderColor": "#c1c1cd",
          "borderRadius": 16,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 12,
          "paddingVertical": 4,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
    testID="theme_password_input_container"
  >
    <Text
      style={
        {
          "color": "#535365",
          "fontFamily": "SourceSans3_400Regular",
          "fontSize": 16,
          "left": 12,
          "lineHeight": 24,
          "position": "absolute",
          "top": 12,
        }
      }
    >
      Password
    </Text>
    <TextInput
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "color": "#535365",
            "flex": 1,
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="theme_password_input_text_input"
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="theme_password_input_eye_btn"
    >
      <Text>
        eye
      </Text>
    </View>
  </View>
</View>
`;

exports[`ThemePasswordInput renders correctly when value is present 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#fafcff",
          "borderColor": "#c1c1cd",
          "borderRadius": 16,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 12,
          "paddingVertical": 4,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
    testID="theme_password_input_container"
  >
    <TextInput
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "color": "#535365",
            "flex": 1,
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="theme_password_input_text_input"
      value="SecretPass"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="theme_password_input_eye_btn"
    >
      <Text>
        eye
      </Text>
    </View>
  </View>
</View>
`;

exports[`ThemePasswordInput renders correctly with error message 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#fafcff",
          "borderColor": "#c1c1cd",
          "borderRadius": 16,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingRight": 12,
          "paddingVertical": 4,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
    testID="theme_password_input_container"
  >
    <Text
      style={
        {
          "color": "#535365",
          "fontFamily": "SourceSans3_400Regular",
          "fontSize": 16,
          "left": 12,
          "lineHeight": 24,
          "position": "absolute",
          "top": 12,
        }
      }
    >
      Password
    </Text>
    <TextInput
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "color": "#535365",
            "flex": 1,
            "fontFamily": "SourceSans3_400Regular",
            "fontSize": 16,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="theme_password_input_text_input"
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="theme_password_input_eye_btn"
    >
      <Text>
        eye
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#d70443",
        "fontFamily": "SourceSans3_600SemiBold",
        "fontSize": 12,
        "marginLeft": 12,
        "marginTop": 8,
      }
    }
  >
    Invalid password
  </Text>
</View>
`;
